[package]
name = "prodzytsol"
version = "0.1.0"
authors = ["aQaTL <mmsoltys@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git = "https://github.com/hecrj/iced.git", rev = "842d54732bce8f9c8b070d9bed9809b70ed728a7" }
iced_native = { git = "https://github.com/hecrj/iced.git", rev = "842d54732bce8f9c8b070d9bed9809b70ed728a7" }
anyhow = "1.0"
log = "0.4"
flexi_logger = "0.17"